--- a/BackendAPI/BackendAPI.csproj
+++ b/BackendAPI/BackendAPI.csproj
@@ -14,7 +14,9 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" Version="9.1.0" />
     <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="EFCore.BulkExtensions.SqlServer" Version="8.0.4" />
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="8.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
