--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -31,7 +31,7 @@ jobs:
           key: ${{ runner.os }}-sonar
 
       - name: Build solution
-        run: dotnet build <your-solution-file.sln>
+        run: dotnet build SimpleWebApplication.sln
 
       - name: Run SonarQube Scanner
         env:
